--- a/Example/DividedNaviController/TZViewController.xib
+++ b/Example/DividedNaviController/TZViewController.xib
@@ -1,49 +1,49 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12118" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13178.6" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12086"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13156.2"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="TZViewController">
             <connections>
-                <outlet property="view" destination="iN0-l3-epB" id="Qdl-jI-gde"/>
+                <outlet property="leadingConstraint" destination="HnA-Ww-904" id="r4e-sd-TtH"/>
+                <outlet property="titleLabel" destination="OJg-LH-Z0P" id="Nx5-tc-oFV"/>
+                <outlet property="view" destination="4PH-7f-jA7" id="1WX-KR-FVC"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB">
+        <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="4PH-7f-jA7">
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-            <subviews>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kTv-wz-AIe">
-                    <rect key="frame" x="164" y="318" width="46" height="30"/>
-                    <constraints>
-                        <constraint firstAttribute="width" constant="46" id="ili-GK-c76"/>
-                    </constraints>
-                    <state key="normal" title="PUSH"/>
-                    <connections>
-                        <action selector="push:" destination="-1" eventType="touchUpInside" id="hnO-ds-J4j"/>
-                    </connections>
-                </button>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rSV-zZ-Ko0">
-                    <rect key="frame" x="172" y="465" width="30" height="30"/>
-                    <state key="normal" title="POP"/>
-                    <connections>
-                        <action selector="pop:" destination="-1" eventType="touchUpInside" id="7Pb-wB-AM3"/>
-                    </connections>
-                </button>
-            </subviews>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-            <constraints>
-                <constraint firstItem="kTv-wz-AIe" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="CJP-Zr-Lq0"/>
-                <constraint firstItem="kTv-wz-AIe" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="CR3-9D-8B7"/>
-                <constraint firstItem="rSV-zZ-Ko0" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="d9N-8z-OE6"/>
-                <constraint firstItem="rSV-zZ-Ko0" firstAttribute="top" secondItem="kTv-wz-AIe" secondAttribute="bottom" constant="117" id="mJw-5v-fQe"/>
-            </constraints>
-        </view>
+            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+            <view key="tableHeaderView" contentMode="scaleToFill" id="0Zu-lU-Mhh">
+                <rect key="frame" x="0.0" y="0.0" width="375" height="100"/>
+                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                <subviews>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.69999999999999996" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="OJg-LH-Z0P">
+                        <rect key="frame" x="20" y="40.5" width="42" height="20.5"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                </subviews>
+                <color key="backgroundColor" red="0.0" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                <constraints>
+                    <constraint firstItem="OJg-LH-Z0P" firstAttribute="height" relation="lessThanOrEqual" secondItem="0Zu-lU-Mhh" secondAttribute="height" constant="-50" id="5Ym-cA-wOB"/>
+                    <constraint firstItem="OJg-LH-Z0P" firstAttribute="leading" secondItem="0Zu-lU-Mhh" secondAttribute="leading" constant="20" id="HnA-Ww-904"/>
+                    <constraint firstItem="OJg-LH-Z0P" firstAttribute="centerY" secondItem="0Zu-lU-Mhh" secondAttribute="centerY" id="R5h-uE-q0D"/>
+                </constraints>
+            </view>
+            <connections>
+                <outlet property="dataSource" destination="-1" id="xj9-WJ-fLP"/>
+                <outlet property="delegate" destination="-1" id="qZt-a1-np1"/>
+            </connections>
+            <point key="canvasLocation" x="125.5" y="169.5"/>
+        </tableView>
     </objects>
 </document>
